--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,13 @@
 
   <div class="wrapper">
 
+    <div class="no-user">
+      <div class="no-user__content">
+        <span class="octicon octicon-organization"></span>
+         <p>This user not have organizations</p>
+      </div>
+    </div>
+
     <section class="profile">
 
       <header class="header">
