--- a/index.html
+++ b/index.html
@@ -1,100 +1,1 @@
-<!doctype html>
-<html lang="pt-br" class="no-js">
-  <head>
-    <meta charset="UTF-8">
-    <title>Github preview</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="assets/styles/main.css">
-    <script src="assets/scripts/vendor/modernizr.js"></script>
-
-  </head>
-<body>
-
-  <div class="search">
-    <ul class="inputs">
-      <li>
-        <input type="text" class="field" placeholder="github user">
-      </li>
-      <li>
-        <input type="submit" class="request" value="Search">
-      </li>
-    </ul>
-  </div>
-
-  <div class="wrapper">
-
-    <div class="no-user">
-      <div class="no-user__content">
-        <span class="octicon octicon-organization"></span>
-         <p>This user not have organizations</p>
-      </div>
-    </div>
-
-    <section class="profile">
-
-      <header class="header">
-        <img class="image-user" src="" alt="">
-      </header>
-      
-
-      <div class="about">
-        <h1 class="name"></h1>
-      </div>
-
-      <ul class="info">
-        <li class="company">
-          <i class="octicon octicon-organization"></i>
-          <span></span>
-        </li>
-        <li class="blog">
-          <i class="octicon octicon-link"></i>
-          <span></span>
-        </li>
-        <li class="localization">
-          <i class="octicon octicon-location"></i>
-          <span></span>
-        </li>
-        <li class="email">
-          <i class="octicon octicon-mail"></i>
-          <span></span>
-        </li>
-        <li class="created-date">
-          <i class="octicon octicon-clock"></i>
-          <span></span>
-        </li>
-      </ul>
-
-      <div class="orgs"></div>
-
-      <ul class="numbers">
-        <li class="seguidores">
-          <span></span>
-          <p>Followers</p>
-        </li>
-        <li class="favoritos">
-          <span></span>
-          <p>Starred</p>
-        </li>
-        <li class="seguindo">
-          <span></span>
-          <p>Following</p>
-        </li>
-      </ul>
-
-    </section>
-
-    <div class="repositorios">
-      <div class="fastslide">
-
-        <div class="repo-list"></div>
-
-      </div>
-    </div>
-  </div>
-
-  <script src="assets/scripts/vendor.js"></script>
-
-  <script src="assets/scripts/main.js"></script>
-</body>
-</html>
+<!DOCTYPE html> <html lang=pt-br class=no-js> <head> <meta charset=UTF-8> <title>Github preview</title> <meta name=description content=""> <meta name=viewport content="width=device-width"> <link rel=stylesheet href=assets/styles/main.css> <script src=assets/scripts/vendor/modernizr.js></script>  <body> <div class=search> <ul class=inputs> <li> <input class=field placeholder="github user"> </li> <li> <input type=submit class=request value=Search> </li> </ul> </div> <div class=wrapper> <div class=no-user> <div class=no-user__content> <span class="octicon octicon-organization"></span> <p>This user not have organizations</p> </div> </div> <section class=profile> <header class=header> <img class=image-user src="" alt=""> </header> <div class=about> <h1 class=name></h1> </div> <ul class=info> <li class=company> <i class="octicon octicon-organization"></i> <span></span> </li> <li class=blog> <i class="octicon octicon-link"></i> <span></span> </li> <li class=localization> <i class="octicon octicon-location"></i> <span></span> </li> <li class=email> <i class="octicon octicon-mail"></i> <span></span> </li> <li class=created-date> <i class="octicon octicon-clock"></i> <span></span> </li> </ul> <div class=orgs></div> <ul class=numbers> <li class=seguidores> <span></span> <p>Followers</p> </li> <li class=favoritos> <span></span> <p>Starred</p> </li> <li class=seguindo> <span></span> <p>Following</p> </li> </ul> </section> <div class=repositorios> <div class=fastslide> <div class=repo-list></div> </div> </div> </div> <script src=assets/scripts/vendor.js></script> <script src=assets/scripts/main.js></script>  
